# Neut---Neural-Template-Library

./: ActivatableFrontAndBack.h  Activate.h  ActivateProviderFrontAndBack.h  CMakeLists.txt  Connection.h  ConnectionSite.h  Exception.h  FastConnection.h  IActivatable.h  IActivate.h  IActivateProvider.h  IActivationFrontAndBack.h  IConnection.h  IConnectionAttachable.h  IInputs.h  IMessageReceiver.h  IMessagingHub.h  INode.h  IOutputs.h  IReceiveFromFrontAndBack.h  IReceiver.h  Inputs.h  InputsCached.h  InputsCachedSimple.h  InputsFromCSV.h  MessagingHub.h  MultiThreadedActivator.h  NeuralNetworkApp.cpp  NeuralNetworkApp.h  Node.h  NodeBulkInput.h  NodeContainer.h  NodeContainerActivationRepeater.h  NodeContainerPeriodicSerializer.h  NodeContainerPeriodicSerializerLoadOnly.h  NodeContainerTwoForOneActivation.h  NodeInput.h  NodeNetworkLayer.h  NodeNetworkPillar.h  NodeOutput.h  (+29 more)
.svn/: wc.db
Documentation/html/: _activatable_front_and_back_8h.html  _activatable_front_and_back_8h__dep__incl.dot  _activatable_front_and_back_8h__dep__incl.md5  _activatable_front_and_back_8h__incl.dot  _activatable_front_and_back_8h__incl.md5  _activatable_front_and_back_8h_source.html  _activate_8h.html  _activate_8h__dep__incl.dot  _activate_8h__dep__incl.md5  _activate_8h__incl.dot  _activate_8h__incl.md5  _activate_8h_source.html  _activate_provider_front_and_back_8h.html  _activate_provider_front_and_back_8h__dep__incl.dot  _activate_provider_front_and_back_8h__dep__incl.md5  _activate_provider_front_and_back_8h__incl.dot  _activate_provider_front_and_back_8h__incl.md5  _activate_provider_front_and_back_8h_source.html  _connection_8h.html  _connection_8h__dep__incl.dot  _connection_8h__dep__incl.md5  _connection_8h__incl.dot  _connection_8h__incl.md5  _connection_8h_source.html  _connection_site_8h.html  _connection_site_8h__dep__incl.dot  _connection_site_8h__dep__incl.md5  _connection_site_8h__incl.dot  _connection_site_8h__incl.md5  _connection_site_8h_source.html  _i_activatable_8h.html  _i_activatable_8h__dep__incl.dot  _i_activatable_8h__dep__incl.md5  _i_activatable_8h__incl.dot  _i_activatable_8h__incl.md5  _i_activatable_8h_source.html  (+442 more)
NeuralNetworkApplication 16-11-2011 18.23.xcarchive/: Info.plist
NeuralNetworkApplication.xcclassmodel/: elements
NeuralNetworkApplication.xcodeproj/: project.pbxproj  seimon.mode1v3
PrepareTrainingSetApplication/: Delta.h  ForecastGrowthResultsSet.h  GrowthFunctor.h  MaxFunctor.h  MinFunctor.h  OffsetFunctor.h  PrepareTrainingSet.h  ResultsMatrix.h  ResultsMatrixGrowth.h  TrainingMatrix.h  TrainingRow.h  UnDeltaResultsSet.h  main.cpp
(+422 files in other folders)
