cmake_minimum_required(VERSION 3.3)
project(NeuralNetworkApplication)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    PrepareTrainingSetApplication/Delta.h
    PrepareTrainingSetApplication/ForecastGrowthResultsSet.h
    PrepareTrainingSetApplication/GrowthFunctor.h
    PrepareTrainingSetApplication/main.cpp
    PrepareTrainingSetApplication/MaxFunctor.h
    PrepareTrainingSetApplication/MinFunctor.h
    PrepareTrainingSetApplication/OffsetFunctor.h
    PrepareTrainingSetApplication/PrepareTrainingSet.h
    PrepareTrainingSetApplication/ResultsMatrix.h
    PrepareTrainingSetApplication/ResultsMatrixGrowth.h
    PrepareTrainingSetApplication/ScaleFunctor.h
    PrepareTrainingSetApplication/TrainingMatrix.h
    PrepareTrainingSetApplication/TrainingRow.h
    PrepareTrainingSetApplication/UnDeltaFunctor.h
    PrepareTrainingSetApplication/UnDeltaResultsSet.h
    ActivatableFrontAndBack.h
    Activate.h
    ActivateProviderFrontAndBack.h
    Connection.h
    ConnectionSite.h
    Exception.h
    FastConnection.h
    IActivatable.h
    IActivate.h
    IActivateProvider.h
    IActivationFrontAndBack.h
    IConnection.h
    IConnectionAttachable.h
    IInputs.h
    IMessageReceiver.h
    IMessagingHub.h
    INode.h
    INodeContainer.h
    INodeLayer.h
    INodeNetwork.h
    Inputs.h
    InputsCached.h
    InputsCachedSimple.h
    InputsFromCSV.h
    IOutputs.h
    IReceiveFromFrontAndBack.h
    IReceiver.h
    main.cpp
    MessagingHub.h
    MultiThreadedActivator.h
    NeuralNetworkApp.cpp
    NeuralNetworkApp.h
    Node.h
    NodeBulkInput.h
    NodeContainer.h
    NodeContainerActivationRepeater.h
    NodeContainerPeriodicSerializer.h
    NodeContainerPeriodicSerializerLoadOnly.h
    NodeContainerTwoForOneActivation.h
    NodeInput.h
    NodeNetworkLayer.h
    NodeNetworkPillar.h
    NodeOutput.h
    NodePassThrough.h
    NodePassThroughBulk.h
    NodePassThroughBulkWithBias.h
    NodePerceptronBias.h
    NodePerceptronRecall.h
    NodePerceptronTarget.h
    NodePerceptronTraining.h
    NodeReceiver.h
    NodeResult.h
    NodeSerializer.h
    NullReceiver.h
    Outputs.h
    OutputsScaled.h
    OutputsToCSV.h
    OutputsToCSVScaled.h
    ReceiveFromBack.h
    ReceiveFromFront.h
    ReceiveFromFrontAndBack.h
    ReceiverWrapper.h
    TestMessaging.cpp
    TestMessaging.h
    TestNeuralNetwork.cpp
    TestNeuralNetwork.h
    TestNode.cpp
    TestNode.h
    utils.h
    Version.h)

add_executable(NeuralNetworkApplication ${SOURCE_FILES})